--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,20 +7,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-div {
-  display: flex;
+ul,ol {
+  list-style: none;
 }
 
-.flex-center {
-  justify-content: center;
-  align-items: center;
-}
-
-.flex-auto {
-  flex: auto;
+.icon {
+  width: 1em; height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
 }
