--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  font-size: 100px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,6 +14,7 @@ body * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 14px;
 }
 
 code {
